# Alignator

./: .gitignore  Cargo.toml  README.md  alignator.py
bridges/uniffi/: Cargo.toml
bridges/uniffi/src/: lib.rs
bridges/wasm/: Cargo.toml
bridges/wasm/src/: lib.rs
core/rust/: Cargo.toml
core/rust/src/: heuristics.rs  language.rs  lib.rs  parser.rs  tempo.rs
core/rust/tests/: basic.rs  language.rs  multilingual.rs  timing.rs
formatters/rust/: Cargo.toml
formatters/rust/src/: lib.rs
heuristics_data/: arabic.json  bengali.json  en.json  french.json  gujarati.json  hindi.json  japanese.json  kannada.json  korean.json  malayalam.json  marathi_devanagari.json  odia.json  portuguese.json  punjabi_gurmukhi.json  russian.json  spanish.json  tamil.json  telugu.json
