[package]
name = "alignator-wasm"
version = "0.1.0"
edition = "2021"
authors = ["DeepMind Team", "Darshan"]
description = "WebAssembly bindings for Alignator engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alignator = { path = "../../core/rust" }
alignator-formatters = { path = "../../formatters/rust" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
